update .env file

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-DB_HOST=127.0.0.1                       
+# DB_HOST=127.0.0.1
+DB_HOST=fullstack-mysql
 DB_DRIVER=mysql                          
-DB_USER=root
-DB_PASSWORD=password
+DB_USER=medlit
+DB_PASSWORD=Password@123
+MYSQL_ROOT_PASSWORD=root
 DB_NAME=db_medlit
-DB_PORT=3306 
+DB_PORT=3306
 API_SECRET=63stmedl1t4app
 TOKEN_HOUR_LIFESPAN=1
