containerize medlit api

--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-# DB_HOST=127.0.0.1
-DB_HOST=fullstack-mysql
+DB_HOST=34.101.241.44
 DB_DRIVER=mysql                          
-DB_USER=medlit
-DB_PASSWORD=Password@123
-MYSQL_ROOT_PASSWORD=root
+DB_USER=root
+DB_PASSWORD=password
 DB_NAME=db_medlit
 DB_PORT=3306
 API_SECRET=63stmedl1t4app
