ready to deploy app

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-DB_HOST=34.101.241.44
-DB_DRIVER=mysql                          
-DB_USER=root
+# production
+# DB_HOST=medlit-app:asia-southeast2:medlit-database-2
+
+# development
+DB_HOST=127.0.0.1
+
+DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=db_medlit
-DB_PORT=3306
 API_SECRET=63stmedl1t4app
 TOKEN_HOUR_LIFESPAN=1
